Alterações dentro do Grid

--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
     </header>
 <div class="container">
     <main>
-        <div class="item">Imovel 1</div>
-        <div class="item">Imovel 2</div>
-        <div class="item">Imovel 3</div>
-        <div class="item">Imovel 4</div>
-        <div class="item">Imovel 5</div>
-        <div class="item">Imovel 6</div>
+        <div class="item1">
+            <div class="subitem"> <h2></h2><br>
+                <h2><b>R$ 120.000,00</b></h2>
+                <p><small>descrição</small></p></div>
+        </div>
+        <div class="item2">Imovel 2</div>
+        <div class="item3">Imovel 3</div>
+        <div class="item4">Imovel 4</div>
+        <div class="item5">Imovel 5</div>
+        <div class="item6">Imovel 6</div>
     </main>
 
     <footer>
