--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <main>
         <div class="item1">
             <div class="subitem"> <h2></h2><br>
-                <h2><b>R$ 120.000,00</b></h2>
-                <p><small>descrição</small></p></div>
+                <p><small><b>descrição</b></small></p>
+                </div>
+            <div class="subitem2"><h2>R$ 120.000,00</h2></div>
         </div>
         <div class="item2">Imovel 2</div>
         <div class="item3">Imovel 3</div>
