padronização do Grid

--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
                 </div>
             <div class="subitem2"><h2>R$ 120.000,00</h2></div>
         </div>
-        <div class="item2">Imovel 2</div>
-        <div class="item3">Imovel 3</div>
-        <div class="item4">Imovel 4</div>
-        <div class="item5">Imovel 5</div>
-        <div class="item6">Imovel 6</div>
+        <div class="item2"><div class="subitem"> <h2></h2><br>
+            <p><small><b>descrição</b></small></p>
+            </div>
+        <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+        <div class="item3"><div class="subitem"> <h2></h2><br>
+            <p><small><b>descrição</b></small></p>
+            </div>
+        <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+        <div class="item4"><div class="subitem"> <h2></h2><br>
+            <p><small><b>descrição</b></small></p>
+            </div>
+        <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+        <div class="item5"><div class="subitem"> <h2></h2><br>
+            <p><small><b>descrição</b></small></p>
+            </div>
+        <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+        <div class="item6"><div class="subitem"> <h2></h2><br>
+            <p><small><b>descrição</b></small></p>
+            </div>
+        <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
     </main>
 
     <footer>
