--- a/tabela.html
+++ b/tabela.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="tabela.css">
 </head>
 <body>
     <main>
         <haeder>
             <nav>
                 <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>Sobre</li></a>
-                    <a href="#"><li>Contato</li></a>
+                    <a href="./index.html"><li>Tela Inicial</li></a>
                 </ul>
             </nav>
         </haeder>
@@ -30,7 +28,7 @@
                 <th>Número de Quartos</th>
                 <th>Disponibilidade</th>
             </tr>
-            <tr class="teste">
+            <tr class="escuro">
                 <td>Apartamento 1</td>
                 <td>R$ 250,000</td>
                 <td>Rua Exemplo, 123</td>
@@ -48,7 +46,7 @@
                 <td>3</td>
                 <td>Vendido</td>
             </tr>
-            <tr class="teste">
+            <tr class="escuro">
                 <td>Apartamento 3</td>
                 <td>R$ 280,000</td>
                 <td>Rua do Exemplo, 789</td>
@@ -66,7 +64,7 @@
                 <td>3</td>
                 <td>Disponível</td>
             </tr>
-            <tr class="teste">
+            <tr class="escuro">
                 <td>Apartamento 5</td>
                 <td>R$ 320,000</td>
                 <td>Rua Exemplo, 567</td>
@@ -84,7 +82,7 @@
                 <td>3</td>
                 <td>Disponível</td>
             </tr>
-            <tr class="teste">
+            <tr class="escuro">
                 <td>Apartamento 7</td>
                 <td>R$ 265,000</td>
                 <td>Rua do Exemplo, 321</td>
@@ -102,7 +100,7 @@
                 <td>3</td>
                 <td>Disponível</td>
             </tr>
-            <tr class="teste">
+            <tr class="escuro">
                 <td>Apartamento 9</td>
                 <td>R$ 290,000</td>
                 <td>Rua do Exemplo, 654</td>
@@ -117,6 +115,24 @@
                 <td>Avenida do Modelo, 654</td>
                 <td>(11) 555-8765</td>
                 <td>125</td>
+                <td>3</td>
+                <td>Disponível</td>
+            </tr>
+            <tr class="escuro">
+                <td>Apartamento 11</td>
+                <td>R$ 270,000</td>
+                <td>Rua do Exemplo, 987</td>
+                <td>(11) 555-9876</td>
+                <td>95</td>
+                <td>2</td>
+                <td>Disponível</td>
+            </tr>
+            <tr>
+                <td>Apartamento 12</td>
+                <td>R$ 380,000</td>
+                <td>Avenida do Modelo, 789</td>
+                <td>(11) 555-6789</td>
+                <td>130</td>
                 <td>3</td>
                 <td>Disponível</td>
             </tr>
