--- a/Cadastro.html
+++ b/Cadastro.html
@@ -71,7 +71,7 @@
             <input type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone" required>
             <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required>
     
-            <button type="submit" name="registrar">Registrar</button>
+            <button type="submit" name="registrar" onclick="location.href = 'index.html'">Registrar</button>
         </form>
     </div>
 </body>
