Ajustes para favorecer a padronização do trabalho

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -48,12 +48,13 @@
         }
 
         button[name="registrar"] {
-            background-color: #0b9430;
+            background-color: #ff9100;
             color: #fff;
             padding: 12px;
             border: none;
             border-radius: 5px;
             width: 100%;
+            cursor: pointer;
         }
     </style>
 </head>
