--- a/Login.html
+++ b/Login.html
@@ -45,20 +45,22 @@ input {
 }
 
 button[name="entrar"] {
-    background-color: #0e178d;
+    background-color: #32a4e6;
     color: #fff;
     padding: 12px;
     border: none;
     border-radius: 5px;
     width: 100%;
+    cursor: pointer;
 }
 button[name="registrar"] {
-    background-color: #37a110;
+    background-color: #ff9100;
     color: #fff;
     padding: 12px;
     border: none;
     border-radius: 5px;
-   width: 100%;
+    width: 100%;
+    cursor: pointer;
 }
 </style>
 
