--- a/tabela.html
+++ b/tabela.html
@@ -11,11 +11,12 @@
         <haeder>
             <nav>
                 <ul>
-                    <a href="./index.html"><li>Tela Inicial</li></a>
+                    <a href="Login.html"><li class="login">Login</li></a>
+                    <a href="./index.html"><li>Home</li></a>
+                    <a href="tabela.html"><li class="imoveis">Imoveis</li></a>
                 </ul>
             </nav>
         </haeder>
-        <hr>
     <h1>Relatório de Orçamentos</h1>
     <div class="container">
         <table>
