--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     
     <header>
         <ul>
-            <a href="#"><li>Home</li></a>
-            <a href="#"><li class="login">Login</li></a>
-            <a href="#"><li>Imoveis</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="Login.html"><li class="login">Login</li></a>
+            <a href="tabela.html"><li>Imoveis</li></a>
         </ul>
         <form>
             <label for="pesquisaGrid">Pesquisa:</label>
-            <input type="text" id="pesquisaGrid">
+            <input type="text" id="pesquisaGrid" placeholder="Busca...">
         </form>
     </header>
 <div class="container">
@@ -26,7 +26,7 @@
                 <p><small><b>Situado no coração de Nova Iguaçu, este apartamento oferece uma mistura única de conforto e sofisticação. Com uma área de estar espaçosa e bem iluminada, o apartamento é perfeito para quem valoriza espaço e luz natural. A cozinha, equipada com eletrodomésticos modernos, é ideal para quem gosta de cozinhar em casa. Os quartos são aconchegantes e acolhedores, com amplo espaço de armazenamento.<br> O banheiro é moderno e elegante, com acabamentos de alta qualidade.</b></small></p>
                 </div>
                 <div class="subitem2"><h2>R$ 120.000,00</h2>
-                    <a href="#" class="button">Saiba mais</a></div></div>
+                    <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
 
             <div class="item2"><div class="subitem"> <h2></h2><br>
                 <p><small><b>descrição</b></small></p>
