--- a/tabela.html
+++ b/tabela.html
@@ -140,5 +140,9 @@
         </table>
     </div><br><br>
 </main>
+<footer>
+<hr>
+<p>2023 &copy Todos os direitos reservaods</p>
+</footer>
 </body>
 </html>
