Mudanças finais emergenciais

--- a/index.html
+++ b/index.html
@@ -29,29 +29,34 @@
                     <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
 
             <div class="item2"><div class="subitem"> <h2></h2><br>
-                <p><small><b>descrição</b></small></p>
+                <p><small><b>Situado no coração de Nova Iguaçu, este apartamento oferece uma mistura única de conforto e sofisticação. Com uma área de estar espaçosa e bem iluminada, o apartamento é perfeito para quem valoriza espaço e luz natural. A cozinha, equipada com eletrodomésticos modernos, é ideal para quem gosta de cozinhar em casa. Os quartos são aconchegantes e acolhedores, com amplo espaço de armazenamento.<br> O banheiro é moderno e elegante, com acabamentos de alta qualidade.</b></small></p>
                 </div>
-                <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+                <div class="subitem2"><h2>R$ 120.000,00</h2>
+                    <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
 
             <div class="item3"><div class="subitem"> <h2></h2><br>
-                <p><small><b>descrição</b></small></p>
+                <p><small><b>Situado no coração de Nova Iguaçu, este apartamento oferece uma mistura única de conforto e sofisticação. Com uma área de estar espaçosa e bem iluminada, o apartamento é perfeito para quem valoriza espaço e luz natural. A cozinha, equipada com eletrodomésticos modernos, é ideal para quem gosta de cozinhar em casa. Os quartos são aconchegantes e acolhedores, com amplo espaço de armazenamento.<br> O banheiro é moderno e elegante, com acabamentos de alta qualidade.</b></small></p>
                 </div>
-                <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+                <div class="subitem2"><h2>R$ 120.000,00</h2>
+                    <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
             
             <div class="item4"><div class="subitem"> <h2></h2><br>
-                <p><small><b>descrição</b></small></p>
+                <p><small><b>Situado no coração de Nova Iguaçu, este apartamento oferece uma mistura única de conforto e sofisticação. Com uma área de estar espaçosa e bem iluminada, o apartamento é perfeito para quem valoriza espaço e luz natural. A cozinha, equipada com eletrodomésticos modernos, é ideal para quem gosta de cozinhar em casa. Os quartos são aconchegantes e acolhedores, com amplo espaço de armazenamento.<br> O banheiro é moderno e elegante, com acabamentos de alta qualidade.</b></small></p>
                 </div>
-                <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+                <div class="subitem2"><h2>R$ 120.000,00</h2>
+                    <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
 
             <div class="item5"><div class="subitem"> <h2></h2><br>
-                <p><small><b>descrição</b></small></p>
+                <p><small><b>Situado no coração de Nova Iguaçu, este apartamento oferece uma mistura única de conforto e sofisticação. Com uma área de estar espaçosa e bem iluminada, o apartamento é perfeito para quem valoriza espaço e luz natural. A cozinha, equipada com eletrodomésticos modernos, é ideal para quem gosta de cozinhar em casa. Os quartos são aconchegantes e acolhedores, com amplo espaço de armazenamento.<br> O banheiro é moderno e elegante, com acabamentos de alta qualidade.</b></small></p>
                 </div>
-                <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+                <div class="subitem2"><h2>R$ 120.000,00</h2>
+                    <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
 
             <div class="item6"><div class="subitem"> <h2></h2><br>
-                <p><small><b>descrição</b></small></p>
+                <p><small><b>Situado no coração de Nova Iguaçu, este apartamento oferece uma mistura única de conforto e sofisticação. Com uma área de estar espaçosa e bem iluminada, o apartamento é perfeito para quem valoriza espaço e luz natural. A cozinha, equipada com eletrodomésticos modernos, é ideal para quem gosta de cozinhar em casa. Os quartos são aconchegantes e acolhedores, com amplo espaço de armazenamento.<br> O banheiro é moderno e elegante, com acabamentos de alta qualidade.</b></small></p>
                 </div>
-                <div class="subitem2"><h2>R$ 120.000,00</h2></div></div>
+                <div class="subitem2"><h2>R$ 120.000,00</h2>
+                    <a href="TRABALHO HTML.html" class="button">Saiba mais</a></div></div>
     </main>
 
     <footer>
