--- a/Cadastro.html
+++ b/Cadastro.html
@@ -20,7 +20,9 @@
         .container {
             width: 250px;
             margin: 40px;
-            padding: 75px;
+            padding: 25px;
+            padding-right: 50px;
+            padding-left: 50px;
             background-color: #fffdfd8a;
             border-radius: 40px;
             box-sizing: content-box;
@@ -52,7 +54,7 @@
             color: #fff;
             padding: 12px;
             border: none;
-            border-radius: 5px;
+            border-radius: 15px;
             width: 100%;
             cursor: pointer;
         }
