--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,9 @@ body {
 .container {
     width: 350px;
     margin: 120px;
-    padding: 50px;
+    padding: 25px;
+    padding-left: 40px;
+    padding-right: 40px;
     background-color: #fffdfd8a;
     border-radius: 40px;
 }
@@ -50,7 +52,7 @@ button[name="entrar"] {
     color: #fff;
     padding: 12px;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     width: 100%;
     cursor: pointer;
 }
@@ -59,7 +61,7 @@ button[name="registrar"] {
     color: #fff;
     padding: 12px;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     width: 100%;
     cursor: pointer;
 }
