--- a/Cadastro.html
+++ b/Cadastro.html
@@ -15,6 +15,8 @@
             background-image: url('https://i.pinimg.com/originals/e7/50/38/e75038ae16be9d330cb1f3563833647e.gif');
             background-size: cover;
             background-repeat: no-repeat;
+            min-width: 700px;
+            min-height: 700px;
         }
 
         .container {
