--- a/Login.html
+++ b/Login.html
@@ -17,6 +17,8 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 700px;
+    min-width: 700px;
    
 }
 .container {
