Alguns ajustes no CSS e HTML

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                         <div class="infoDialog" id="infoDialog">
                             
                             <h2><small class="smallInfo">Rua Áurea Fonseca de Jesus, 1 - Califórnia, Nova Iguaçu - RJ</small>
-                            Apartamento com 2 Quartos e 1 banheiro à Venda, 53 m² por R$ 120.000</h2>
+                            Apartamento com 2 Quartos e 1 banheiro à Venda, 53 m² por R$ 120.000,00!!
+                            <p><small>Este apartamento é ideal para quem busca conforto, praticidade e segurança. O imóvel possui sala ampla, cozinha americana, área de serviço, varanda e uma vaga de garagem. O condomínio oferece portaria 24 horas, salão de festas, playground e piscina. O apartamento está localizado em uma rua tranquila, próximo a comércios, escolas, hospitais e transporte público. Não perca essa oportunidade de morar em uma das melhores regiões de Nova Iguaçu. Agende já a sua visita!</p></small></h2>
 
-                            <button class="botaoInfo" id="botaoInfo">BOTÃO</button>
+                            <button class="botaoInfo" id="botaoInfo">X</button>
                         </div>
                         
                     </dialog></div></div>
